--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="card">
   <h1>舌苔辨識系統</h1>
-  <p class="muted">請選擇要進行的功能：</p>
+  <p class="muted">此系統針對手機操作設計，請先輸入病患 ID 後再進入相機或歷史紀錄。</p>
 
-  <div class="flex-col" style="align-items:center; margin-top:16px; gap:16px">
-    <a class="btn btn-block" href="{{ url_for('id_input', next='index') }}">舌苔辨識</a>
+  <div class="btn-group" style="margin-top:10px">
+    <a class="btn btn-block" href="{{ url_for('id_input', next='index') }}">舌苔辨識（相機）</a>
     <a class="btn btn-block" href="{{ url_for('teaching') }}">教學資源</a>
   </div>
 </div>
