--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,11 @@
 {% block title %}首頁{% endblock %}
 {% block content %}
 <div class="card">
-  <h1>舌苔辨識系統</h1>
-  <p class="muted">此系統針對手機操作設計，請先輸入病患 ID 後再進入相機或歷史紀錄。</p>
+  <h1>中醫舌苔系統</h1>
+  <p class="muted">請先輸入病患 ID 後再進入相機或歷史紀錄。</p>
 
   <div class="btn-group" style="margin-top:10px">
-    <a class="btn btn-block" href="{{ url_for('id_input', next='index') }}">舌苔辨識（相機）</a>
+    <a class="btn btn-block" href="{{ url_for('id_input', next='index') }}">舌苔辨識</a>
     <a class="btn btn-block" href="{{ url_for('teaching') }}">教學資源</a>
   </div>
 </div>
