--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card">
   <h1>中醫舌苔系統</h1>
-  <p class="muted">舌苔辨識系統幫助您用手機就能辨識舌苔健康度；教學資源有各式中醫舌苔資源可以學習及練習。</p>
+  <p class="muted">舌苔辨識系統幫助您用手機就能辨識舌苔健康度<br>教學資源有各式中醫舌苔資源可以學習及練習。</p>
 
   <div class="btn-group" style="margin-top:10px">
     <a class="btn btn-block" href="{{ url_for('id_input', next='index') }}">舌苔辨識</a>
