--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,8 @@
 {% block title %}首頁{% endblock %}
 {% block content %}
 <div class="card">
-  <h1>中醫舌苔系統</h1>
-  <p class="muted">舌苔辨識系統幫助您用手機就能辨識舌苔健康度<br>教學資源有各式中醫舌苔資源可以學習及練習。</p>
+  <h1>Tongue識課</h1>
+  <p class="muted">Tongue識課幫助您用手機就能辨識舌苔健康度<br>教學資源有各式中醫舌苔資源可以學習及練習。</p>
 
   <div class="btn-group" style="margin-top:10px">
     <a class="btn btn-block" href="{{ url_for('id_input', next='index') }}">舌苔辨識</a>
